[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
once_cell = "1.16.0"
transpose = "0.2.2"
base64 = "0.21.0"
itertools = "0.10.5"
rand = "0.8.5"

[dev-dependencies]
textwrap = "0.16.0"
yare = "1.0.2"
